--- a/index.html
+++ b/index.html
@@ -3,22 +3,31 @@
 
 <head>
     <title>Mi viaje a Cracovia</title>
-    <link re="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
+    <h1>Cracovia en 4 días</h1>
+
     <p>En esta página os mostaré como ha sido mi viaje por Cracovia durante 4 días</p>
-    <h1>Día 1: Llegada a Cracovia</h1>
-    <p>Durante este día nos estableceremos en el hotel y comentaremos con la visita a las zonas más centricas de
-        Cracovia.</p>
-    <h1>Día 2: Excursión minas de sal</h1>
-    <p>Para este día realizaremos una excusión de 3-4 horas a las minas de sal donde realizaremos una excursión bajo
-        tierra.</p>
-    <h1>Día 3: Día en Auschwitz</h1>
-    <p>Este día estaremos todo el día visitando las diferentes partes que forman el campo de concentración de Auschwitz
-    </p>
-    <h1>Día 4: Visita a Zakopane</h1>
-    <p>Para este último día dejaremos la excursión a las montañas de Zakopane.</p>
+    <h2>Día 1: Llegada a Cracovia</h1>
+        <p>Durante este día nos estableceremos en el hotel y comentaremos con la visita a las zonas más centricas de
+            Cracovia.</p>
+        <img src="cracovia.jpg" alt="Cracovia">
+        <h2>Día 2: Excursión minas de sal</h1>
+            <p>Para este día realizaremos una excusión de 3-4 horas a las minas de sal donde realizaremos una excursión
+                bajo
+                tierra.</p>
+            <img src="minas de sal.jpg" alt="Minas de Sal">
+            <h2>Día 3: Día en Auschwitz</h1>
+                <p>Este día estaremos todo el día visitando las diferentes partes que forman el campo de concentración
+                    de Auschwitz
+                </p>
+                <img src="Auschwitz.jpg" alt="Auschwitz">
+                <h2>Día 4: Visita a Zakopane</h1>
+                    <p>Para este último día dejaremos la excursión a las montañas de Zakopane.</p>
+                    <img src="zakopane.jpg" alt="zakopane">
+
 </body>
 
 </html>
