--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
                     <img src="zakopane.jpg" alt="zakopane">
 
 </body>
+<footer>
+    <p>Company: LucíaTravels</p>
+    <p><a href="mail: luciadavorico@gmail.com">luciadavorico@gmail.com</a></p>
+</footer>
 
 </html>
