Change body section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
                 <h2>Día 4: Visita a Zakopane</h1>
                     <p>Para este último día dejaremos la excursión a las montañas de Zakopane.</p>
                     <img src="zakopane.jpg" alt="zakopane">
+
+                    <p>Os dejo dos enlaces que os servirán de ayuda:<br>
+                    <ul>
+                        <li><a
+                                href="https://www.civitatis.com/es/cracovia?aid=100&cmp=es_ES_Nonbrand&cmpint=_Destinos_Cracovia_RSA&gad_source=1&gclid=CjwKCAiA3Na5BhAZEiwAzrfagIJkDGryFE5grCN_Bs99TZuiomzQhaywrTDQpTHiLprNwR44S1gCNhoCsW4QAvD_BwE&gclsrc=aw.ds">
+                                Civitatis: Visitas Guiadas</a></li>
+                        <li><a href="https://www.viviendodeviaje.com/cracovia-en-4-dias/">Cracovia en 4 días: Ruta
+                                guiada</a></li>
+                    </ul>
+                    </p>
 </body>
 <footer>
     <p>Company: LucíaTravels</p>
